# bibr

./: .gitignore  .session.vim  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  bibr.example.toml
.github/workflows/: ci.yml  release.yml
docs/: config-reference.md  installation.md  releasing.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: default.toml  mod.rs
src/domain/: mod.rs  sort.rs
src/infra/: bib_store.rs  clipboard.rs  launcher.rs  mod.rs  watcher.rs
src/search/: mod.rs
src/services/: notes.rs
src/ui/: app.rs  events.rs  mod.rs  widgets.rs
tests/fixtures/: test.bib  test2.bib
