[package]
name = "bibr"
version = "0.1.0"
authors = ["OhMyOpenCode <hello@example.com>"]
edition = "2021"
description = "Initial skeleton for BIBR Rust project"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1.0"

ratatui = "0.30"
crossterm = "0.28"
biblatex = "0.11"
nucleo-matcher = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = "0.4"
directories = "4"
arboard = { version = "3", optional = true }
notify = { version = "8", optional = true }
which = "4"
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
dirs = "5"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
rstest = "0.19"
assert_cmd = "2"
predicates = "3"
